# math-formula-to-latex

./: .gitignore  LICENSE  README.md  README.zh-CN.md
Code/: README.md  main.py  pyproject.toml  requirements.txt
Code/tests/: conftest.py  test_latex_tokenization.py  test_metrics.py  test_model.py  test_scheduler.py  test_tokenizer.py
Code/vit_latex/: __init__.py  config.py  plotting.py
Code/vit_latex/data/: __init__.py  preprocessing.py  tokenizer.py
Code/vit_latex/evaluation/: __init__.py  evaluator.py
Code/vit_latex/models/: __init__.py  captioner.py  decoder.py  encoder.py
Code/vit_latex/training/: __init__.py  metrics.py  scheduler.py  trainer.py
Document/: main.bcf  main.blg  main.fdb_latexmk  main.tex  main.xdv  ref.bib
Document/abstractC/: abstractC.tex
Document/abstractE/: abstractE.tex
Document/acknowledge/: acknowledge.tex
Document/appendix/: appendix.tex
Document/body/: Vision Transformer基本原理.tex  模型构建.tex  结果与评价.tex  绪论.tex  训练原理.tex
Document/cover/: cover_cyber.tex
assets/: architecture_diagram.py
